--- a/src/global.css
+++ b/src/global.css
@@ -3,28 +3,17 @@
 * vars
 */
 :root {
-  --base-black: #566c83;
-  --base-gray: #afb7c1;
+  --base-black: #4d6986;
+  --base-white: #fdfdfd;
   --base-red: #bd143b;
   --base-text: var(--base-black);
   --base-title: var(--base-black);
   --base-background: #e0e5ec;
   --base-border: #abb7c7;
-  --base-accent: #64b5f6;
-  --base-light-accent: #a1d2f9;
-  --base-hover: #8bcafd;
-  --base-focus: 0 0 0 3px var(--base-accent);
-  --base-disabled: #5693c3;
+  --base-accent: #2c98ef;
   --base-ui-black: #bec3c9;
-  --base-ui-white: #fff;
   --base-ui-gradient-gray: #caced4;
   --base-ui-gradient-light-gray: #f0f5fd;
-  --base-gradient:
-    linear-gradient(
-      90deg,
-      var(--base-light-accent),
-      var(--base-accent)
-    );
 
   /* typography */
   --base-unit: 0.8rem;
@@ -246,7 +235,7 @@ img {
 
 mark {
   padding: 0 3px;
-  background: var(--base-light-accent);
+  background: var(--base-accent);
 }
 
 /* Remove all animations and transitions for people that prefer not to see them */
@@ -291,9 +280,9 @@ h1 {
 }
 
 ::selection {
-  color: var(--base-text);
+  color: var(--base-white);
   text-shadow: none;
-  background-color: var(--base-light-accent);
+  background-color: var(--base-accent);
 }
 
 /*	ui ------------------------------------- */
@@ -308,7 +297,7 @@ h1 {
     var(--distance, 5px) var(--distance, 5px)
     calc(var(--distance, 5px) * 2) var(--base-ui-black),
     calc(var(--distance, 5px) * -1) calc(var(--distance, 5px) * -1)
-    calc(var(--distance, 5px) * 2) var(--base-ui-white);
+    calc(var(--distance, 5px) * 2) var(--base-white);
 }
 
 .concave,
@@ -326,7 +315,7 @@ h1 {
     var(--distance, 5px) var(--distance, 5px)
     calc(var(--distance, 5px) * 2) var(--base-ui-black),
     calc(var(--distance, 5px) * -1) calc(var(--distance, 5px) * -1)
-    calc(var(--distance, 5px) * 2) var(--base-ui-white);
+    calc(var(--distance, 5px) * 2) var(--base-white);
 }
 
 .convex,
@@ -344,7 +333,7 @@ h1 {
     var(--distance, 5px) var(--distance, 5px)
     calc(var(--distance, 5px) * 2) var(--base-ui-black),
     calc(var(--distance, 5px) * -1) calc(var(--distance, 5px) * -1)
-    calc(var(--distance, 5px) * 2) var(--base-ui-white);
+    calc(var(--distance, 5px) * 2) var(--base-white);
 }
 
 .pressed,
@@ -357,7 +346,7 @@ h1 {
     inset var(--distance, 5px) var(--distance, 5px)
     calc(var(--distance, 5px) * 2) var(--base-ui-black),
     inset calc(var(--distance, 5px) * -1) calc(var(--distance, 5px) * -1)
-    calc(var(--distance, 5px) * 2) var(--base-ui-white);
+    calc(var(--distance, 5px) * 2) var(--base-white);
 }
 
 /*  hr ------------------------------------- */
